<resources>
  <string name="app_name">cuisineconnect</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="home">Home</string>
  <string name="search">Search</string>
  <string name="save.failed">Failed to save in database</string>
  <string name="save.failed.2">Cannot to save in database</string>
  <string name="save.failed.user">Failed to get user in database</string>
  <string name="collection">Collection</string>
  <string name="profile">Profile</string>
  <string name="icon_create_recipe">icon create recipe</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">Welcome !</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">Login failed</string>
  <string name="please_enter_your_e_mail_and_password_to_create_an_account">Please Enter your e-mail and Password to create an account.</string>
  <string name="email">Email</string>
  <string name="eg_namaemail_emailkamu_com">Eg namaemail@emailkamu.com</string>
  <string name="password_stars">**** **** ****</string>
  <string name="password">Password</string>
  <string name="create_account">Create Account</string>
  <string name="already_have_an_account">Already have an account?</string>
  <string name="login_here"><u>Login here</u></string>
  <string name="welcome_back">Welcome Back!</string>
  <string name="kindly_sign_in_to_continue">Kindly Sign in to continue.</string>
  <string name="login">Login</string>
  <string name="or_register_here"><u>Or register here</u></string>
  <string name="username">Username</string>
  <string name="namasayadaniel">Eg nama_saya_daniel</string>
  <string name="add_image">add image</string>
  <string name="no_internet">No internet, please check your connection</string>
  <string name="image">Image</string>
  <string name="exception.message">%s</string>
  <string name="image_upload_failed">Failed to upload image</string>
  <string name="what_s_your_opinion">What\'s your opinion…</string>
  <string name="no_internet_connection">No internet Connection</string>
  <string name="your_internet_connection_is_currently_not_available_please_check_or_try_again">Your internet connection is currently not available please check or try again.</string>
  <string name="available">Available</string>
  <string name="you_might_like_this"><u>You might like this</u></string>
  <string name="must_include_upper_lower_number_symbol"><![CDATA[include upper, lower, number & symbol]]></string>
  <string name="example_gmail_com">example@gmail.com</string>
  <string name="press_and_hold_on_a_recipe_to_select_it">Press and hold on a recipe to select it.</string>
  <string name="display_name">Display name</string>
  <string name="example_name">example_name</string>
  <string name="example_unique_name">example_unique_name</string>
  <string name="confirm_password">Confirm password</string>
  <string name="full_image">full image</string>
  <string name="all_your_inspirations_in_one_place">All Your Inspirations in One Place</string>
  <string name="publish">Publish</string>
  <string name="strip">-</string>
  <string name="text">Text</string>
  <string name="recipe">Recipe</string>
  <string name="title_creamy_tomato_basil_pasta">Title: Creamy Tomato Basil Pasta</string>
  <string name="description_a_delicious_and_creamy_pasta_dish_made_with_fresh_tomatoes_basil_and_parmesan_cheese_perfect_for_a_quick_weeknight_dinner">Description: A delicious and creamy pasta dish made with fresh tomatoes, basil, and parmesan cheese. Perfect for a quick weeknight dinner!</string>
  <string name="serving_s">Serving(s)</string>
  <string name="_3_people">3 people</string>
  <string name="cooking_time">Cooking Time</string>
  <string name="_1hr_30mins">1hr 30mins</string>
  <string name="add_ingredient">Add ingredient</string>
  <string name="add_step">Add step</string>
  <string name="hashtags_e_g_vegetarian_fish_etc">Hashtags: (e.g., #vegetarian, #fish, etc)</string>
  <string name="empty_state">empty state</string>
  <string name="nothing_to_see_here_yet_nstart_exploring_to_fill_up_your_feed">Nothing to see here yet.\nStart exploring to fill up your feed!</string>
  <string name="guest_819">Guest#819</string>
  <string name="guest819">\@guest819</string>
  <string name="recipes">recipes</string>
  <string name="followers">followers</string>
  <string name="following">following</string>
  <string name="follow">Follow</string>
  <string name="post">Post</string>
  <string name="mm_dd">mm dd</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="save">Save</string>
  <string name="bio">Bio</string>
  <string name="none">none...</string>
  <string name="what_are_your_thoughts">What are your thoughts?</string>
  <string name="send">Send</string>
  <string name="explore">Explore</string>
  <string name="search_icon">Search Icon</string>
  <string name="hashtag_strip">#-</string>
  <string name="posts">posts</string>
  <string name="enter_text_here">Enter text here</string>
  <string name="item_failed_to_reload_or_has_been_removed">Item failed to reload or has been removed</string>
  <string name="post_tag">post</string>
  <string name="healthy_vegetarian_and_rice">Healthy Vegetarian and Rice</string>
  <string name="r_ne_nc_ni_np_ne">r\ne\nc\ni\np\ne</string>
  <string name="letsgocook123">LetsGoCook123</string>
  <string name="dotdotdot">...</string>
  <string name="add">add</string>
  <string name="try_again">Try again</string>
  <string name="_1">1</string>
  <string name="xx_hours_ago">xx hours ago</string>
  <string name="reply">Reply</string>
  <string name="bahan_bahan">Bahan-bahan</string>
  <string name="trending_today">Trending Today</string>
  <string name="choose_language">English (language)</string>
  <string name="log_out">Log out</string>
  <string name="guard">Are you sure you want to leave?</string>
  <string name="notification">Notification</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="recipes_caps">Recipes</string>
  <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
  <string name="please_enter_your_email">Please enter your email</string>
  <string name="email_must_contain_at">Email must contain @ symbol</string>
  <string name="email_must_contain_domain">Email must contain a domain (e.g., .com)</string>
  <string name="please_enter_a_valid_email">Please enter a valid email ex:example@gmail.com</string>
  <string name="please_enter_your_password">Please enter your password</string>
  <string name="password_must_be_more_than_4_characters">Password must be more than 4 characters</string>
  <string name="password_must_contain_uppercase_lowercase_and_number">Password must contain at least one uppercase letter, one lowercase letter, and one number</string>
  <string name="authentication_failed">Authentication failed.</string>
  <string name="please_enter_your_display_name">Please enter your display name</string>
  <string name="display_must_only_letters_numbers_or_underscores">Display name must only contain letters, numbers, or underscores</string>
  <string name="please_enter_your_username">Please enter your username</string>
  <string name="username_must_only_letters_numbers_or_underscores">Username must only contain letters, numbers, or underscores</string>
  <string name="username_must_be_between_3_and_15_characters">Username must be between 3 and 15 characters</string>
  <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
  <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
  <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter</string>
  <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter</string>
  <string name="password_must_contain_at_least_one_number">Password must contain at least one number</string>
  <string name="password_must_contain_at_least_one_special_character">Password must contain at least one special character</string>
  <string name="passwords_do_not_match">Passwords do not match</string>
  <string name="registration_successful">Registration successful.</string>
  <string name="username_is_already_taken">Username is already taken. Please choose another.</string>
  <string name="failed_to_save_user_data">Failed to save user data. Please try again.</string>
  <string name="error_checking_username_availability">Error checking username availability. Please try again.</string>
  <string name="this_email_is_already_registered">This email is already registered.</string>
  <string name="your_password_is_too_weak">Your password is too weak. Please choose a stronger password.</string>
  <string name="invalid_email_format">Invalid email format. Please enter a valid email.</string>
  <string name="this_account_does_not_exist_or_has_been_disabled">This account doesn\'t exist or has been disabled.</string>
  <string name="an_unknown_error_occurred">An unknown error occurred. Please try again later.</string>
  <string name="latest">Latest</string>
  <string name="most_liked">Most Liked</string>
  <string name="oldest">Oldest</string>
  <string name="least_liked">Least Liked</string>
  <string name="choose_this_recipe">Choose this recipe?</string>
  <string name="delete_recipe">Delete Recipe</string>
  <string name="are_you_sure_you_want_to_delete_the_recipe">Are you sure you want to delete the recipe?</string>
  <string name="recipe_chosen"> is chosen</string>
  <string name="recipe_deleted"> deleted</string>
  <string name="my_recipes">My Recipes</string>
  <string name="saved_recipes">Saved Recipes</string>
  <string name="save_progress_title">Save Progress</string>
  <string name="save_progress_message">Are you sure to save current post progress?</string>
  <string name="clear_progress_title">Clear Progress</string>
  <string name="clear_progress_message">Are you sure to clear current post progress?</string>
  <string name="publish_title">Publish</string>
  <string name="publish_message">Are you sure you want to publish the post?</string>
  <string name="successfully_saved_post">Successfully saved post</string>
  <string name="successfully_deleted_progress">Successfully delete progress</string>
  <string name="please_fill_all_fields">Please ensure all fields are filled in.</string>
  <string name="successfully_created_post">Successfully Created Post</string>
  <string name="clear_recipe_progress_message">Are you sure to clear current recipe progress?</string>
  <string name="success_recipe_progress_cleared">Success! Recipe progress cleared</string>
  <string name="save_recipe_progress_message">Are you sure to save current recipe progress?</string>
  <string name="success_recipe_saved">Success! Recipe saved</string>
  <string name="publish_recipe_message">Are you sure you want to publish the recipe?</string>
  <string name="success_recipe_created">Success! Recipe created.</string>
  <string name="title_required">Title is required to publish the recipe.</string>
  <string name="portion_required">Portion size is required to publish the recipe.</string>
  <string name="duration_required">Duration is required to publish the recipe.</string>
  <string name="add_ingredient_message">Please add at least one ingredient.</string>
  <string name="add_step_message">Please add at least one step.</string>
  <string name="carrot_2">2 Carrots</string>
  <string name="ingredients">Ingredients</string>
  <string name="steps">Steps</string>
</resources>