<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc_vanilla_cream"
    android:gravity="center"
    tools:context=".app.screen.authentication.RegisterActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      >

    <View
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_cc_logo_colored"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="40dp"
        android:src="@drawable/login_img"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/welcome"
        android:textColor="@color/cc_text_dark_green"
        android:textSize="28sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/please_enter_your_e_mail_and_password_to_create_an_account"
        android:textColor="@color/cc_russet_brown"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/display_name"
        android:textColor="@color/cc_russet_brown"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/cc_russet_brown"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxStrokeColor="@color/cc_russet_brown"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/cc_russet_brown"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_display_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/example_name"
          android:inputType="text"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/username"
        android:textColor="@color/cc_russet_brown"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/cc_russet_brown"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxStrokeColor="@color/cc_russet_brown"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/cc_russet_brown"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/example_unique_name"
          android:inputType="text"
          />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/email"
        android:textColor="@color/cc_russet_brown"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/cc_russet_brown"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxStrokeColor="@color/cc_russet_brown"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/cc_russet_brown"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/example_gmail_com"
          android:inputType="textEmailAddress"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/password"
        android:textColor="@color/cc_russet_brown"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/cc_russet_brown"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxStrokeColor="@color/cc_russet_brown"
        app:boxStrokeWidth="2dp"
        app:endIconMode="custom"
        app:endIconContentDescription="icon_password"
        app:endIconDrawable="@drawable/ic_eye_open"
        app:endIconTint="@color/cc_russet_brown"
        app:hintTextColor="@color/cc_russet_brown"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/must_include_upper_lower_number_symbol"
          android:inputType="textPassword"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/confirm_password"
        android:textColor="@color/cc_russet_brown"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/cc_russet_brown"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxStrokeColor="@color/cc_russet_brown"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/cc_russet_brown"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_password_comparator"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/must_include_upper_lower_number_symbol"
          android:inputType="textPassword"
          />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_radius"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/cc_light_gray"
        />

    <ProgressBar
        android:id="@+id/pb_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login_here"
        android:textColor="@color/cc_text_dark_green"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        />

  </LinearLayout>

</ScrollView>