<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc_vanilla_cream"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".app.screen.authentication.RegisterActivity"
    >

  <View
      android:layout_width="wrap_content"
      android:layout_height="40dp"
      />

  <ImageView
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:src="@drawable/ic_cc_logo_colored"
      />

  <ImageView
      android:layout_width="300dp"
      android:layout_height="200dp"
      android:layout_marginHorizontal="40dp"
      android:src="@drawable/register_img"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:text="@string/welcome_back"
      android:textColor="@color/cc_text_dark_green"
      android:textSize="28sp"
      android:textStyle="bold"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginBottom="30dp"
      android:text="@string/kindly_sign_in_to_continue"
      android:textColor="@color/cc_russet_brown"
      android:textSize="16sp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:text="@string/email"
      android:textColor="@color/cc_russet_brown"
      android:textSize="16sp"
      android:textStyle="bold"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginBottom="15dp"
      android:textColorHint="@color/cc_russet_brown"
      app:boxCornerRadiusBottomEnd="20dp"
      app:boxCornerRadiusBottomStart="20dp"
      app:boxCornerRadiusTopEnd="20dp"
      app:boxStrokeColor="@color/cc_russet_brown"
      app:boxStrokeWidth="2dp"
      app:hintTextColor="@color/cc_russet_brown"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:text="@string/password"
      android:textColor="@color/cc_russet_brown"
      android:textSize="16sp"
      android:textStyle="bold"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginBottom="20dp"
      android:textColorHint="@color/cc_russet_brown"
      app:boxCornerRadiusBottomEnd="20dp"
      app:boxCornerRadiusBottomStart="20dp"
      app:boxCornerRadiusTopEnd="20dp"
      app:boxStrokeColor="@color/cc_russet_brown"
      app:boxStrokeWidth="2dp"
      app:endIconContentDescription="icon_password"
      app:endIconDrawable="@drawable/ic_eye_open"
      app:endIconMode="custom"
      app:endIconTint="@color/cc_russet_brown"
      app:hintTextColor="@color/cc_russet_brown"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/must_include_upper_lower_number_symbol"
        android:inputType="textPassword"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:background="@drawable/button_radius"
      android:text="@string/login"
      android:textAllCaps="false"
      android:textColor="@color/cc_light_gray"
      />

  <ProgressBar
      android:id="@+id/pb_create"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      />

  <TextView
      android:id="@+id/tv_to_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:text="@string/or_register_here"
      android:textColor="@color/cc_text_dark_green"
      android:textSize="16sp"
      android:textStyle="bold"
      />


</LinearLayout>