<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.screen.collection.CollectionFragment"
    >

  <!-- AppBarLayout for managing scroll behavior -->
  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
      >

    <!-- CollapsingToolbarLayout with the Toolbar inside it -->
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="@color/cc_light_gray"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
        >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
          app:layout_collapseMode="parallax"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >

        <FrameLayout
            android:id="@+id/fl_background"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/cc_vanilla_cream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

          <ImageView
              android:id="@+id/iv_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:scaleType="centerCrop"
              />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_background"
            >

          <com.google.android.material.card.MaterialCardView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:layout_marginHorizontal="24dp"
              android:layout_marginBottom="8dp"
              android:backgroundTint="@color/white"
              app:cardCornerRadius="250dp"
              app:strokeColor="@color/white"
              app:strokeWidth="3dp"
              >

            <ImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"
                />
          </com.google.android.material.card.MaterialCardView>

          <TextView
              android:id="@+id/tv_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="24dp"
              android:text="@string/guest_819"
              android:textSize="24sp"
              android:textStyle="bold"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              />

          <TextView
              android:id="@+id/tv_unique_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="24dp"
              android:text="@string/guest819"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tb_title"
              />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text=""
            android:textSize="16sp"
            android:lineSpacingExtra="2dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_profile"
            />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bio"
            >

          <LinearLayout
              android:id="@+id/ll_stats"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="24dp"
              android:layout_marginTop="12dp"
              android:orientation="horizontal"
              >

            <TextView
                android:id="@+id/tv_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/recipes"
                />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/followers"
                />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                />

          </LinearLayout>

        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="@drawable/ic_settings"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <!-- TabLayout outside the CollapsingToolbarLayout but inside AppBarLayout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabIndicatorColor="@color/cc_russet_brown"
        app:tabTextColor="@color/cc_russet_brown"
        />

  </com.google.android.material.appbar.AppBarLayout>

  <!-- ViewPager2 inside the NestedScrollView for scrollable content -->
  <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/vp2_profile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      />

  <!--  <include layout="@layout/item_fab_create_recipe" />-->

  <include
      android:id="@+id/incl_internet"
      layout="@layout/no_internet_connection"
      android:visibility="gone"
      />

</androidx.coordinatorlayout.widget.CoordinatorLayout>